# llmfit

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml  python-ci.yml  release.yml
llmfit-core/: Cargo.toml
llmfit-core/src/: hardware.rs  models.rs
llmfit-python/: Makefile  hatch_build.py  pyproject.toml
llmfit-python/src/llmfit/: __init__.py
llmfit-python/tests/: test_llmfit.py
llmfit-tui/src/: main.rs
scripts/: scrape_hf_models.py
